fix: next attempt to auto-publish prereleases [skip ci]

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -10,7 +10,10 @@ on:
         branches:
             - "*"
         tags:
-            - "v[0-9]+.[0-9]+.[0-9]+(-[a-z]+.[0-9]+)?"
+          # normal versions
+          - "v[0-9]+.[0-9]+.[0-9]+"
+          # pre-releases
+          - "v[0-9]+.[0-9]+.[0-9]+-**"
     pull_request: {}
 
 jobs:
