--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zwave-js",
-  "version": "2.1.2-beta.0",
+  "version": "2.2.0",
   "description": "Z-Wave driver written entirely in JavaScript/TypeScript",
   "keywords": [],
   "main": "build/index.js",
