fix(driver): rework initialization procedure, silently skip invalid data

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,7 @@
 			],
 			"env": {
 				// "NO_CACHE": "true",
-				"LOGLEVEL": "info"
+				// "LOGLEVEL": "info"
 			},
 			"console": "integratedTerminal",
 			"sourceMaps": true
