build: add new launch configuration for decoding messages [skip ci]

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,6 +39,19 @@
 			},
 			"console": "integratedTerminal",
 			"sourceMaps": true
+		},
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "Decode message",
+			"port": 9229,
+			"runtimeArgs": [
+				"--async-stack-traces",
+				"--inspect-brk=9229",
+				"${workspaceFolder}/test/debug.js"
+			],
+			"console": "integratedTerminal",
+			"sourceMaps": true
 		}
 	]
 }
