build: upgrade to TypeScript 3.8 (Beta)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
 		"removeComments": false,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
+		"importsNotUsedAsValues": "error",
 		"sourceMap": true,
 		"inlineSourceMap": false,
 		"stripInternal": true,
