--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "semver": "^7.1.1",
     "supports-color": "^7.1.0",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.0-dev.20200124",
     "yargs": "^15.1.0"
   },
   "dependencies": {
