--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "bugs": {
     "url": "https://github.com/AlCalzone/node-zwave-js/issues"
   },
+  "funding": {
+    "url": "https://github.com/sponsors/AlCalzone/"
+  },
   "engines": {
     "node": ">=8.0.0"
   },
