--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
 				"--async-stack-traces",
 				"--inspect-brk=9229",
 				"-r",
-				"ts-node/register",
+				"ts-node/register/transpile-only.js",
 				"${workspaceFolder}/test/run.ts"
 			],
 			"env": {
