--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,7 @@
 			"request": "attach",
 			"name": "Attach (localhost)",
 			"port": 9229,
+			"skipFiles": ["<node_internals>/**"],
 			"sourceMaps": true
 		},
 		{
@@ -38,6 +39,7 @@
 				// "LOGLEVEL": "info"
 			},
 			"console": "integratedTerminal",
+			"skipFiles": ["<node_internals>/**"],
 			"sourceMaps": true
 		},
 		{
@@ -51,6 +53,7 @@
 				"${workspaceFolder}/test/debug.js"
 			],
 			"console": "integratedTerminal",
+			"skipFiles": ["<node_internals>/**"],
 			"sourceMaps": true
 		}
 	]
