Decorator metadata is unused and is causing crashes on load.  Disable it.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 		"outDir": "build/",
 		"removeComments": false,
 		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true,
+		"emitDecoratorMetadata": false,
 		"importsNotUsedAsValues": "error",
 		"sourceMap": true,
 		"inlineSourceMap": false,
