--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/mockdate": "^2.0.0",
     "@types/moment-timezone": "^0.5.13",
     "@types/node": "^13.11.0",
+    "@types/prettier": "^2.0.0",
     "@types/semver": "^7.1.0",
     "@types/serialport": "^8.0.0",
     "@types/triple-beam": "^1.3.0",
@@ -101,9 +102,10 @@
     "check": "npm run build -- --noEmit",
     "check:watch": "npm run check -- --watch",
     "generateCCAPIInterface": "ts-node maintenance/generateCCAPIInterface.ts",
+    "generateCCExports": "ts-node maintenance/generateCCExports.ts",
     "cleanBuildDir": "rimraf ./build",
-    "prebuild": "npm run generateCCAPIInterface",
-    "prewatch": "npm run generateCCAPIInterface",
+    "prebuild": "npm run generateCCAPIInterface && npm run generateCCExports",
+    "prewatch": "npm run generateCCAPIInterface && npm run generateCCExports",
     "test:reset": "jest --clear-cache",
     "test:ts": "jest",
     "test:ci": "npm run test:ts -- --runInBand",
