build: convert build scripts to gulp, copy index files to root on pack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,11 @@
 		"pretty": true,
 		"types": ["node", "jest-extended"]
 	},
-	"include": ["src/**/*.ts", "maintenance/**/*.ts", "test/**/*.ts"],
+	"include": [
+		"src/**/*.ts",
+		"maintenance/**/*.ts",
+		"test/**/*.ts",
+		"gulpfile.ts"
+	],
 	"exclude": ["build/**", "node_modules/**"]
 }
