build: copy entrypoints to root, add to files and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@ zwave-js-*.tgz
 
 # Compiled source files
 /build
+/*.d.ts
+/*.map
+# AUTO-GENERATED: secondary module exports
+/CommandClass.js
+/Controller.js
+/Driver.js
+/Error.js
+/Node.js
+/Values.js
+/index.js
+
+# Some other stuff
