--- a/package.json
+++ b/package.json
@@ -6,18 +6,44 @@
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
+    "CommandClass.d.ts",
+    "CommandClass.d.ts.map",
+    "CommandClass.js",
+    "CommandClass.js.map",
+    "Controller.d.ts",
+    "Controller.d.ts.map",
+    "Controller.js",
+    "Controller.js.map",
+    "Driver.d.ts",
+    "Driver.d.ts.map",
+    "Driver.js",
+    "Driver.js.map",
+    "Error.d.ts",
+    "Error.d.ts.map",
+    "Error.js",
+    "Error.js.map",
+    "Node.d.ts",
+    "Node.d.ts.map",
+    "Node.js",
+    "Node.js.map",
+    "Values.d.ts",
+    "Values.d.ts.map",
+    "Values.js",
+    "Values.js.map",
+    "build/**/*.{js,d.ts,map}",
     "config/",
     "index.d.ts",
     "index.d.ts.map",
     "index.js",
-    "index.js.map",
-    "build/**/*.{js,d.ts,map}"
+    "index.js.map"
   ],
   "author": {
     "name": "AlCalzone",
     "email": "d.griesel@gmx.net"
   },
-  "contributors": ["RoboPhred (https://github.com/RoboPhred)"],
+  "contributors": [
+    "RoboPhred (https://github.com/RoboPhred)"
+  ],
   "license": "MIT",
   "homepage": "https://github.com/AlCalzone/node-zwave-js#readme",
   "repository": {
@@ -110,8 +136,7 @@
     "check:watch": "npm run check -- --watch",
     "prebuild": "gulp prebuild",
     "prewatch": "gulp prebuild",
-    "prepack": "gulp prepack",
-    "postpack": "gulp postpack",
+    "postbuild": "gulp copyIndexFilesToRoot",
     "test:reset": "jest --clear-cache",
     "test:ts": "jest",
     "test:ci": "npm run test:ts -- --runInBand",
