--- a/package.json
+++ b/package.json
@@ -6,36 +6,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
-    "CommandClass.d.ts",
-    "CommandClass.d.ts.map",
-    "CommandClass.js",
-    "CommandClass.js.map",
-    "Controller.d.ts",
-    "Controller.d.ts.map",
-    "Controller.js",
-    "Controller.js.map",
-    "Driver.d.ts",
-    "Driver.d.ts.map",
-    "Driver.js",
-    "Driver.js.map",
-    "Error.d.ts",
-    "Error.d.ts.map",
-    "Error.js",
-    "Error.js.map",
-    "Node.d.ts",
-    "Node.d.ts.map",
-    "Node.js",
-    "Node.js.map",
-    "Values.d.ts",
-    "Values.d.ts.map",
-    "Values.js",
-    "Values.js.map",
     "build/**/*.{js,d.ts,map}",
-    "config/",
-    "index.d.ts",
-    "index.d.ts.map",
-    "index.js",
-    "index.js.map"
+    "config/"
   ],
   "author": {
     "name": "AlCalzone",
@@ -131,13 +103,11 @@
   },
   "scripts": {
     "tsc": "tsc -p tsconfig.build.json",
-    "build": "npm run tsc",
-    "watch": "npm run build -- --watch",
+    "prewatch": "gulp prebuild",
+    "watch": "npm run tsc -- --watch",
+    "precheck": "gulp prebuild",
     "check": "npm run tsc -- --noEmit",
     "check:watch": "npm run check -- --watch",
-    "prebuild": "gulp prebuild",
-    "prewatch": "gulp prebuild",
-    "postbuild": "gulp copyIndexFilesToRoot",
     "test:reset": "jest --clear-cache",
     "test:ts": "jest",
     "test:ci": "npm run test:ts -- --runInBand",
