--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -48,11 +48,37 @@ jobs:
 
   # ===================
 
+  # Tests if the library compiles
+  build:
+    if: contains(github.event.head_commit.message, '[skip ci]') == false
+
+    needs: [check-and-lint]
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Compile TypeScript code
+      run: npx gulp build
+
+  # ===================
+
   # Runs unit tests on all supported node versions and OSes
   unit-tests:
     if: contains(github.event.head_commit.message, '[skip ci]') == false
 
-    needs: [check-and-lint]
+    needs: [check-and-lint, build]
 
     runs-on: ${{ matrix.os }}
     strategy:
@@ -136,12 +162,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: |
-        npm ci
-        npm i -g gulp-cli
+      run: npm ci
 
     - name: Create a clean build
-      run: gulp build
+      run: npx gulp build
 
     - name: Publish package to npm
       run: |
