--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -37,7 +37,7 @@ jobs:
       run: npm ci
 
     - name: Perform a type check
-      run: npm run check
+      run: npx gulp check
       env:
         CI: true
 
