feat(test): try to import main entry point after building the project

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -71,6 +71,9 @@ jobs:
 
     - name: Compile TypeScript code
       run: npx gulp build
+    
+    - name: Import main entry point
+      run: node -e 'require("./")'
 
   # ===================
 
