feat(log): filter node logging with LOG_NODES env variable

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,7 +36,7 @@
 			],
 			"env": {
 				// "NO_CACHE": "true",
-				// "LOGLEVEL": "info"
+				// "LOGLEVEL": "verbose"
 			},
 			"console": "integratedTerminal",
 			"skipFiles": ["<node_internals>/**"],
