--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,8 @@
 	"eslint.validate": [
 		"javascript",
 		"javascriptreact",
-		{ "language": "typescript", "autoFix": true },
-		{ "language": "typescriptreact", "autoFix": true }
+		"typescript",
+		"typescriptreact"
 	],
 	"[typescript]": {
 		"editor.codeActionsOnSave": {
