--- a/.github/workflows/cc-bot.yml
+++ b/.github/workflows/cc-bot.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   gh-cc-table:
+    if: contains(github.event.head_commit.message, '[skip ci]') == false
     runs-on: ubuntu-latest
 
     strategy:
