--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "url": "https://github.com/sponsors/AlCalzone/"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "devDependencies": {
     "@actions/core": "^1.2.3",
@@ -58,7 +58,7 @@
     "@babel/plugin-proposal-numeric-separator": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
@@ -71,48 +71,49 @@
     "@types/json5": "0.0.30",
     "@types/mockdate": "^2.0.0",
     "@types/moment-timezone": "^0.5.13",
-    "@types/node": "^13.11.0",
+    "@types/node": "^13.13.4",
     "@types/prettier": "^2.0.0",
     "@types/semver": "^7.1.0",
     "@types/serialport": "^8.0.0",
     "@types/triple-beam": "^1.3.0",
     "@types/yargs": "^15.0.4",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "axios": "^0.19.2",
     "clipboardy": "^2.3.0",
     "commitizen": "^4.0.4",
-    "coveralls": "^3.0.11",
+    "coveralls": "^3.1.0",
     "cz-conventional-changelog": "^3.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "husky": "^4.2.3",
+    "husky": "^4.2.5",
     "jest": "^25.4.0",
     "jest-circus": "^25.4.0",
     "jest-extended": "^0.11.5",
     "mockdate": "2.0.5",
-    "prettier": "^2.0.1",
-    "semver": "^7.1.3",
+    "prettier": "^2.0.5",
+    "semver": "^7.3.2",
     "supports-color": "^7.1.0",
-    "ts-node": "^8.8.2",
+    "ts-node": "^8.9.1",
     "typescript": "^3.8.3",
     "yargs": "^15.3.1"
   },
   "dependencies": {
+    "@alcalzone/jsonl-db": "^0.5.0",
     "@sentry/integrations": "^5.15.5",
-    "@sentry/node": "^5.15.4",
+    "@sentry/node": "^5.15.5",
     "alcalzone-shared": "^2.2.0",
     "ansi-colors": "^4.1.1",
-    "fs-extra": "^8.1.0",
-    "json5": "^2.1.1",
+    "fs-extra": "^9.0.0",
+    "json5": "^2.1.3",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "reflect-metadata": "^0.1.13",
     "serialport": "^8.0.7",
-    "source-map-support": "^0.5.16",
+    "source-map-support": "^0.5.19",
     "winston": "^3.2.1"
   },
   "scripts": {
