--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"typescript.tsdk": "node_modules\\typescript\\lib",
+	"typescript.enablePromptUseWorkspaceTsdk": true,
 	"jest.showCoverageOnLoad": true,
 	"jest.enableCodeLens": true,
 	"jest.pathToJest": "npm run test:ts --",
