chore: update changelog [skip ci]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,23 +22,23 @@
 		"node_modules/": false,
 		"coverage/": false,
 		".*": false,
-		"**/node_modules/": false,
-		"**/*.test.js": false,
-		".nyc_output": false,
-		"**/coverage/": false,
-		"**/*.map": false,
-		"**/zwave-js-*.tgz": false,
-		"cache": false,
-		"build": false,
-		"*.d.ts": false,
-		"*.map": false,
-		"CommandClass.js": false,
-		"Controller.js": false,
-		"Driver.js": false,
-		"Error.js": false,
-		"Node.js": false,
-		"Values.js": false,
-		"index.js": false
+		"**/node_modules/": true,
+		"**/*.test.js": true,
+		".nyc_output": true,
+		"**/coverage/": true,
+		"**/*.map": true,
+		"**/zwave-js-*.tgz": true,
+		"cache": true,
+		"build": true,
+		"*.d.ts": true,
+		"*.map": true,
+		"CommandClass.js": true,
+		"Controller.js": true,
+		"Driver.js": true,
+		"Error.js": true,
+		"Node.js": true,
+		"Values.js": true,
+		"index.js": true
 	},
 	"files.associations": {
 		"**/config/**/*.json": "jsonc"
