--- a/package.json
+++ b/package.json
@@ -7,21 +7,35 @@
   "types": "index.d.ts",
   "files": [
     "CommandClass.d.ts",
+    "CommandClass.d.ts.map",
     "CommandClass.js",
+    "CommandClass.js.map",
     "Controller.d.ts",
+    "Controller.d.ts.map",
     "Controller.js",
+    "Controller.js.map",
     "Driver.d.ts",
+    "Driver.d.ts.map",
     "Driver.js",
+    "Driver.js.map",
     "Error.d.ts",
+    "Error.d.ts.map",
     "Error.js",
+    "Error.js.map",
     "Node.d.ts",
+    "Node.d.ts.map",
     "Node.js",
+    "Node.js.map",
     "Values.d.ts",
+    "Values.d.ts.map",
     "Values.js",
+    "Values.js.map",
     "build/**/*.{js,d.ts,map}",
     "config/",
     "index.d.ts",
-    "index.js"
+    "index.d.ts.map",
+    "index.js",
+    "index.js.map"
   ],
   "author": {
     "name": "AlCalzone",
@@ -67,6 +81,7 @@
     "@types/debug": "4.1.5",
     "@types/fs-extra": "^8.1.0",
     "@types/gulp": "^4.0.6",
+    "@types/gulp-sourcemaps": "0.0.32",
     "@types/jest": "^25.2.1",
     "@types/json5": "0.0.30",
     "@types/mockdate": "^2.0.0",
@@ -88,6 +103,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "gulp": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^6.0.0-alpha.1",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
