--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "json5": "^2.1.3",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
+    "nrf-intel-hex": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "serialport": "^8.0.7",
     "source-map-support": "^0.5.19",
