--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "Node.d.ts.map",
     "Node.js",
     "Node.js.map",
+    "Utils.d.ts",
+    "Utils.d.ts.map",
+    "Utils.js",
+    "Utils.js.map",
     "Values.d.ts",
     "Values.d.ts.map",
     "Values.js",
