--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zwave-js",
-  "version": "3.7.3-beta.0",
+  "version": "3.7.3",
   "description": "Z-Wave driver written entirely in JavaScript/TypeScript",
   "keywords": [],
   "main": "index.js",
