--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "independent"
+	"packages": ["packages/*"],
+	"version": "independent",
+	"command": {
+		"run": {
+			"stream": true
+		}
+	}
 }
