--- a/package.json
+++ b/package.json
@@ -99,6 +99,9 @@
     "@types/yargs": "^15.0.4",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "@zwave-js/config": "^1.0.0",
+    "@zwave-js/core": "^3.8.5",
+    "@zwave-js/shared": "^3.8.5",
     "axios": "^0.19.2",
     "clipboardy": "^2.3.0",
     "commitizen": "^4.0.4",
@@ -124,25 +127,12 @@
     "yargs": "^15.3.1"
   },
   "dependencies": {
-    "@alcalzone/jsonl-db": "^1.2.0",
-    "@sentry/integrations": "^5.15.5",
-    "@sentry/node": "^5.15.5",
-    "alcalzone-shared": "^2.2.0",
-    "ansi-colors": "^4.1.1",
-    "fs-extra": "^9.0.0",
-    "json5": "^2.1.3",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.28",
-    "nrf-intel-hex": "^1.3.0",
-    "reflect-metadata": "^0.1.13",
-    "serialport": "^8.0.7",
-    "source-map-support": "^0.5.19",
-    "winston": "^3.2.1"
+    "@zwave-js/config": "file:packages\\config",
+    "@zwave-js/core": "file:packages\\core",
+    "@zwave-js/shared": "file:packages\\shared",
+    "zwave-js": "file:packages\\zwave-js"
   },
   "scripts": {
-    "tsc": "tsc -p tsconfig.build.json",
-    "watch": "gulp prebuild && npm run tsc -- --watch",
-    "check:watch": "gulp prebuild && npm run tsc -- --noEmit --watch",
     "test:reset": "jest --clear-cache",
     "test:ts": "jest",
     "test:ci": "npm run test:ts -- --runInBand",
@@ -151,16 +141,14 @@
     "coverage": "npm run test:ts -- --collect-coverage",
     "coverage:ci": "npm run test:ci -- --collect-coverage",
     "show-coverage": "npm run coverage && start ./coverage/index.html",
-    "lint:ts": "eslint --ext .ts src",
+    "lint:ts": "eslint --ext .ts \"packages/**/src/**\"",
     "lint:wotan": "wotan",
-    "lint:config": "gulp lintConfigFiles",
     "lint": "npm run lint:ts && npm run lint:wotan",
     "release": "release-script",
     "implemented_ccs": "ts-node maintenance/implemented_ccs.ts",
     "gh-cc-table": "npm run implemented_ccs -- --flavor=github --only-incomplete",
     "usbdebug": "cmd.exe /c \"test\\usbdebug.bat\"",
-    "commit": "git-cz",
-    "config": "ts-node maintenance/importConfig.ts"
+    "commit": "git-cz"
   },
   "readme": "README.md",
   "husky": {
