--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,13 +28,7 @@
     "node": ">=10.0.0"
   },
   "devDependencies": {
-    "@fimbul/mithotyn": "^0.21.0",
-    "@fimbul/wotan": "^0.21.1",
-    "@types/moment-timezone": "^0.5.13",
-    "@types/node": "^13.13.4",
-    "@types/triple-beam": "^1.3.0",
-    "@zwave-js/shared": "^3.8.5",
-    "typescript": "^3.9.4"
+    "@zwave-js/shared": "file:../shared"
   },
   "dependencies": {
     "@alcalzone/jsonl-db": "^1.2.0",
@@ -44,6 +38,18 @@
     "moment-timezone": "^0.5.28",
     "nrf-intel-hex": "^1.3.0",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-typescript": "^7.10.1"
   },
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
