--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -24,14 +24,20 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "devDependencies": {
-    "@fimbul/mithotyn": "^0.21.0",
-    "@fimbul/wotan": "^0.21.1",
-    "ts-node": "^8.9.1",
-    "typescript": "^3.9.4"
-  },
   "dependencies": {
     "alcalzone-shared": "^2.2.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-typescript": "^7.10.1"
   },
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
