--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -23,75 +23,13 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "devDependencies": {
-    "@actions/core": "^1.2.3",
-    "@actions/exec": "^1.0.3",
-    "@actions/github": "^2.1.1",
-    "@alcalzone/release-script": "^1.5.1",
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-typescript": "^7.10.1",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@fimbul/mithotyn": "^0.21.0",
-    "@fimbul/wotan": "^0.21.1",
-    "@types/debug": "4.1.5",
-    "@types/fs-extra": "^8.1.0",
-    "@types/gulp": "^4.0.6",
-    "@types/gulp-sourcemaps": "0.0.32",
-    "@types/jest": "^25.2.1",
-    "@types/json5": "0.0.30",
-    "@types/mockdate": "^2.0.0",
-    "@types/moment-timezone": "^0.5.13",
-    "@types/node": "^13.13.4",
-    "@types/prettier": "^2.0.0",
-    "@types/semver": "^7.1.0",
-    "@types/serialport": "^8.0.0",
-    "@types/triple-beam": "^1.3.0",
-    "@types/yargs": "^15.0.4",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
-    "@zwave-js/shared": "^3.8.5",
-    "@zwave-js/core": "^3.8.5",
-    "@zwave-js/config": "^1.0.0",
-    "axios": "^0.19.2",
-    "clipboardy": "^2.3.0",
-    "commitizen": "^4.0.4",
-    "coveralls": "^3.1.0",
-    "cz-conventional-changelog": "^3.1.0",
-    "eslint": "^7.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "gulp": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "jest-circus": "^25.4.0",
-    "jest-extended": "^0.11.5",
-    "lerna": "^3.3.0",
-    "mockdate": "2.0.5",
-    "prettier": "^2.0.5",
-    "semver": "^7.3.2",
-    "supports-color": "^7.1.0",
-    "ts-node": "^8.9.1",
-    "typescript": "^3.9.4",
-    "yargs": "^15.3.1"
-  },
   "dependencies": {
     "@alcalzone/jsonl-db": "^1.2.0",
     "@sentry/integrations": "^5.15.5",
     "@sentry/node": "^5.15.5",
-    "@zwave-js/config": "^1.0.0",
-    "@zwave-js/core": "^3.8.5",
-    "@zwave-js/shared": "^3.8.5",
+    "@zwave-js/config": "file:../config",
+    "@zwave-js/core": "file:../core",
+    "@zwave-js/shared": "file:../shared",
     "alcalzone-shared": "^2.2.0",
     "ansi-colors": "^4.1.1",
     "fs-extra": "^9.0.0",
@@ -104,10 +42,24 @@
     "source-map-support": "^0.5.19",
     "winston": "^3.2.1"
   },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-typescript": "^7.10.1"
+  },
   "scripts": {
-    "build": "tsc -b tsconfig.build.json",
+    "tsc": "tsc -p tsconfig.build.json",
+    "build": "gulp build",
     "watch": "gulp prebuild && npm run tsc -- --watch",
-    "check:watch": "gulp prebuild && npm run tsc -- --noEmit --watch",
+    "check": "gulp check",
+    "check:watch": "gulp prebuild && npm run tsc -- --composite false --noEmit --watch",
     "test:reset": "jest --clear-cache",
     "test:ts": "jest",
     "test:ci": "npm run test:ts -- --runInBand",
@@ -115,11 +67,40 @@
     "test": "npm run test:watch",
     "coverage": "npm run test:ts -- --collect-coverage",
     "coverage:ci": "npm run test:ci -- --collect-coverage",
-    "show-coverage": "npm run coverage && start ./coverage/index.html",
-    "lint:ts": "eslint --ext .ts src",
-    "lint:wotan": "wotan",
-    "lint:config": "gulp lintConfigFiles",
-    "lint": "npm run lint:ts && npm run lint:wotan",
-    "config": "ts-node maintenance/importConfig.ts"
-  }
+    "show-coverage": "npm run coverage && start ./coverage/index.html"
+  },
+  "files": [
+    "CommandClass.d.ts",
+    "CommandClass.d.ts.map",
+    "CommandClass.js",
+    "CommandClass.js.map",
+    "Controller.d.ts",
+    "Controller.d.ts.map",
+    "Controller.js",
+    "Controller.js.map",
+    "Driver.d.ts",
+    "Driver.d.ts.map",
+    "Driver.js",
+    "Driver.js.map",
+    "Error.d.ts",
+    "Error.d.ts.map",
+    "Error.js",
+    "Error.js.map",
+    "Node.d.ts",
+    "Node.d.ts.map",
+    "Node.js",
+    "Node.js.map",
+    "Utils.d.ts",
+    "Utils.d.ts.map",
+    "Utils.js",
+    "Utils.js.map",
+    "Values.d.ts",
+    "Values.d.ts.map",
+    "Values.js",
+    "Values.js.map",
+    "index.d.ts",
+    "index.d.ts.map",
+    "index.js",
+    "index.js.map"
+  ]
 }
