--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,8 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
+		"composite": true,
+		"noEmit": false,
 		"isolatedModules": false,
 		"declaration": true,
 		"declarationMap": true,
