--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -36,7 +36,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
 
     - name: Perform a type check
       run: npx lerna run check
@@ -71,7 +71,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
 
     - name: Compile TypeScript code
       run: npx lerna run build
@@ -103,7 +103,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
 
     - name: Run component tests
       run: npm run test:ci
@@ -136,7 +136,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
 
     - name: Generate coverage
       run: npm run coverage:ci
@@ -187,7 +187,7 @@ jobs:
         echo "::set-env name=BODY::$BODY"
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
 
     - name: Create a clean build
       run: npx lerna gulp build
