--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -4,6 +4,41 @@
   "description": "Z-Wave driver written entirely in JavaScript/TypeScript",
   "keywords": [],
   "main": "index.js",
+  "types": "index.d.ts",
+  "files": [
+    "CommandClass.d.ts",
+    "CommandClass.d.ts.map",
+    "CommandClass.js",
+    "CommandClass.js.map",
+    "Controller.d.ts",
+    "Controller.d.ts.map",
+    "Controller.js",
+    "Controller.js.map",
+    "Driver.d.ts",
+    "Driver.d.ts.map",
+    "Driver.js",
+    "Driver.js.map",
+    "Error.d.ts",
+    "Error.d.ts.map",
+    "Error.js",
+    "Error.js.map",
+    "Node.d.ts",
+    "Node.d.ts.map",
+    "Node.js",
+    "Node.js.map",
+    "Utils.d.ts",
+    "Utils.d.ts.map",
+    "Utils.js",
+    "Utils.js.map",
+    "Values.d.ts",
+    "Values.d.ts.map",
+    "Values.js",
+    "Values.js.map",
+    "index.d.ts",
+    "index.d.ts.map",
+    "index.js",
+    "index.js.map"
+  ],
   "author": {
     "name": "AlCalzone",
     "email": "d.griesel@gmx.net"
@@ -42,65 +77,10 @@
     "source-map-support": "^0.5.19",
     "winston": "^3.2.1"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-typescript": "^7.10.1"
-  },
   "scripts": {
     "tsc": "tsc -p tsconfig.build.json",
     "build": "gulp build",
-    "watch": "gulp prebuild && npm run tsc -- --watch",
-    "check": "gulp check",
-    "check:watch": "gulp prebuild && npm run tsc -- --composite false --noEmit --watch",
-    "test:reset": "jest --clear-cache",
-    "test:ts": "jest",
-    "test:ci": "npm run test:ts -- --runInBand",
-    "test:watch": "npm run test:ts -- --watch",
-    "test": "npm run test:watch",
-    "coverage": "npm run test:ts -- --collect-coverage",
-    "coverage:ci": "npm run test:ci -- --collect-coverage",
-    "show-coverage": "npm run coverage && start ./coverage/index.html"
-  },
-  "files": [
-    "CommandClass.d.ts",
-    "CommandClass.d.ts.map",
-    "CommandClass.js",
-    "CommandClass.js.map",
-    "Controller.d.ts",
-    "Controller.d.ts.map",
-    "Controller.js",
-    "Controller.js.map",
-    "Driver.d.ts",
-    "Driver.d.ts.map",
-    "Driver.js",
-    "Driver.js.map",
-    "Error.d.ts",
-    "Error.d.ts.map",
-    "Error.js",
-    "Error.js.map",
-    "Node.d.ts",
-    "Node.d.ts.map",
-    "Node.js",
-    "Node.js.map",
-    "Utils.d.ts",
-    "Utils.d.ts.map",
-    "Utils.js",
-    "Utils.js.map",
-    "Values.d.ts",
-    "Values.d.ts.map",
-    "Values.js",
-    "Values.js.map",
-    "index.d.ts",
-    "index.d.ts.map",
-    "index.js",
-    "index.js.map"
-  ]
+    "clean": "npm run tsc -- --clean",
+    "watch": "gulp prebuild && npm run tsc -- --watch"
+  }
 }
