ci: don't depend on check-and-build step

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -56,7 +56,7 @@ jobs:
   unit-tests:
     if: contains(github.event.head_commit.message, '[skip ci]') == false
 
-    needs: [check-and-lint, build]
+    needs: [build]
 
     runs-on: ${{ matrix.os }}
     strategy:
