build: make ts-node work again

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,6 +37,8 @@
 				"--inspect-brk=9229",
 				"-r",
 				"ts-node/register/transpile-only.js",
+				"-r",
+				"tsconfig-paths/register",
 				"${workspaceFolder}/test/run.ts"
 			],
 			"env": {
