--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "semver": "^7.3.2",
     "supports-color": "^7.1.0",
     "ts-node": "^8.9.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.4",
     "yargs": "^15.3.1"
   },
